# ChangeLog for www-client/surfraw
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/surfraw/ChangeLog,v 1.60 2011/01/25 17:57:13 darkside Exp $

  25 Jan 2011; Jeremy Olexa <darkside@gentoo.org> surfraw-2.2.7.ebuild:
  Port changes from Gentoo Prefix, use EROOT, add KEYWORDS, convert to
  EAPI3.

  22 Jan 2011; Jeroen Roovers <jer@gentoo.org>
  files/surfraw-2.2.6-gentoo_pkg_tools.patch:
  Clean up patches.

  15 Sep 2010; Jeroen Roovers <jer@gentoo.org> -surfraw-2.2.6.ebuild,
  surfraw-2.2.7.ebuild:
  Stable for SPARC (bug #323385).

  18 Jul 2010; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.7.ebuild:
  Stable for PPC (bug #323385).

  13 Jul 2010; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.7.ebuild:
  Stable for HPPA (bug #323385).

  11 Jul 2010; Markus Meier <maekke@gentoo.org> surfraw-2.2.7.ebuild:
  x86 stable, bug #323385

  10 Jul 2010; Thomas Anderson <tanderson@gentoo.org> surfraw-2.2.7.ebuild:
  stable amd64, bug 323385

*surfraw-2.2.7 (08 May 2010)

  08 May 2010; Jeroen Roovers <jer@gentoo.org> +surfraw-2.2.7.ebuild:
  Version bump thanks to James Rowe (bug #318947).

  12 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  -files/surfraw-2.1.5-gentoo_pkg_tools.patch, -surfraw-2.2.5.ebuild:
  Remove old.

  10 Jan 2010; Markus Meier <maekke@gentoo.org> surfraw-2.2.6.ebuild:
  x86 stable, bug #298240

  28 Dec 2009; Jeroen Roovers <jer@gentoo.org> surfraw-2.2.6.ebuild:
  Stable for HPPA (bug #298240).

  28 Dec 2009; Tiago Cunha <tcunha@gentoo.org> surfraw-2.2.6.ebuild:
  stable sparc, bug 298240

  28 Dec 2009; nixnut <nixnut@gentoo.org> surfraw-2.2.6.ebuild:
  ppc stable #298240

  24 Dec 2009; Pacho Ramos <pacho@gentoo.org> surfraw-2.2.6.ebuild:
  amd64 stable, bug 298240

*surfraw-2.2.6 (20 Nov 2009)

  20 Nov 2009; Jeroen Roovers <jer@gentoo.org> +surfraw-2.2.6.ebuild,
  +files/surfraw-2.2.6-gentoo_pkg_tools.patch: