@@ -1,5 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX surfraw-2.2.6-gentoo_pkg_tools.patch 1155 RMD160 18222308105ba992367e9d44acc4429955865525 SHA1 fc036a2d2855a5087277c2b3c0389aefa625c083 SHA256 e69f2b9f61eb6078a67e38cfb7351c2e86f6bdd521afaf06c50a520389491e0e
 DIST surfraw-2.2.7.tar.gz 169771 RMD160 aaab07dd942ad7fa0885d362132bc7db6d87b59c SHA1 18f7db3b85f6c8af784338b9af66bf84d9d33443 SHA256 1f23e08210ba04d874e825e6bbbdb23e669cf9c0804388ba0fdd0fd535995fcb
+DIST surfraw-2.2.8.tar.gz 183019 RMD160 77f8f625946fb76665c9e4834506ce4e45f1cd4f SHA1 3114cd6e8d64f87b84ed0eff4369bfb0b10f2eb6 SHA256 925075e05637e39458b00e859193aacde306aafd9a962f44f5114f81713539ec
 EBUILD surfraw-2.2.7.ebuild 2756 RMD160 b77a69c2048ac945c62ff58f8e20e4257a5acb92 SHA1 395f03d78eb7dd9f804f3b1c439564bc565c6513 SHA256 e7b5402b2bcf61e3f4095aecc239eda5de741e288f579583057a1abdcef5d561
-MISC ChangeLog 8078 RMD160 0e3225e6cfb59daa55ff9a227f717073e167c1cb SHA1 79737bc5a2d276a640f6b9155ade3e2a7d010b50 SHA256 c626b399e01e5e6919137a45886b50a094177f99b0de31e1b8543fa6e2279de1
+EBUILD surfraw-2.2.8.ebuild 2699 RMD160 53e4ed5f2f483e468502a98987c7144b9a82a8c8 SHA1 d67e8fe294991d626c8648378056ff1cbef07e9e SHA256 1de0b180ec8f8d7131441fa3c94c2a64cd3936d9eadbe80a02dc88dd628ac430
+MISC ChangeLog 8218 RMD160 292200ca12b5a61ca8b676815e9652349d9059dc SHA1 00d3410d252e0fba63b17e532bfbd9d9b26a71f7 SHA256 e637647f6de9ddddce5a783aae492020eb9eaabbd95fe31d65708c980799a444
 MISC metadata.xml 1316 RMD160 f70a1705c3cc6a47d59b897962af89a4e33deaa2 SHA1 3e080a500f355319d9ec624c9b7c446dfa71fff3 SHA256 91f4b6e59cf528ffec4b55dea2ba072278274f207b92f9ce6b45c5104da8bf8e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk4caagACgkQVWmRsqeSphP27ACfRRuysQ3FArDJmp1eUOc8oT0H
+OjUAn3iWaZ2RzG2LMWO7Y8VM9nZtsVGJ
+=HbYY
+-----END PGP SIGNATURE-----
