@@ -1,6 +1,11 @@
 # ChangeLog for www-client/surfraw
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/surfraw/ChangeLog,v 1.60 2011/01/25 17:57:13 darkside Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/surfraw/ChangeLog,v 1.61 2011/07/12 15:34:54 jer Exp $
+
+*surfraw-2.2.8 (12 Jul 2011)
+
+  12 Jul 2011; Jeroen Roovers <jer@gentoo.org> +surfraw-2.2.8.ebuild:
+  Version bump by James Rowe (bug #374945).
 
   25 Jan 2011; Jeremy Olexa <darkside@gentoo.org> surfraw-2.2.7.ebuild:
   Port changes from Gentoo Prefix, use EROOT, add KEYWORDS, convert to
